--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 	id 'war'
-	id "org.sonarquote" version "2.8"
+	id "org.sonarqube" version "2.8"
 }
 
 group = 'ch.noseryoung'
