--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ jobs:
   include:
     - stage: CodeQuality
       script: ./gradlew sonarqube
-      
+    - stage: Docker
+      if: branch = master
+      script: ./gradlew dockerPush
+      before_script:
+        - echo "$DOCKER_PASSWORT" | docker login -u "$DOCKER_USERNAME" --pasword-stdin
+
 addons:
   sonarcloud:
     organization: $SONAR_USER
