--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
       if: branch = master
       script: ./gradlew dockerPush
       before_script:
-        - echo "$DOCKER_PASSWORT" | docker login -u "$DOCKER_USERNAME" --pasword-stdin
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --pasword-stdin
 
 addons:
   sonarcloud:
